allow assigning section-subsets to appointment group
closes #6832

Test plan:
  - in a separate branch (master), create a new appointment group and
    assign it a group category or section
  - switch to this branch and migrate; the appointment group should
    still be assigned to the group or section you chose earlier
  - create a new appointment group and assign it some course sections
  - verify that students in those sections can reserve appointments, but
    not students that do not belong to those sections

Change-Id: I1662374c5e6d2e5e9f7d6b54b0bc91420f150b7a
Reviewed-on: https://gerrit.instructure.com/8765
Tested-by: Jenkins <jenkins@instructure.com>
Reviewed-by: Jon Jensen <jon@instructure.com>

--- a/app/stylesheets/calendar/scheduler.sass
+++ b/app/stylesheets/calendar/scheduler.sass
@@ -107,8 +107,18 @@ button.single_item_done_button
   td
     vertical-align: top
 
-  .context_id, .section_select select, .group_select select
+  .context_id, .group_select select
     width: 150px
+
+  .section_select ul
+    list-style-type: none
+    margin: 0
+    padding: 0
+
+  .section_select li
+    list-style-type: none
+    margin: 0
+    padding: 0
 
 .delete-block-link
   +accessible_text_replacement
