--- a/app/messages/appointment_group_published.email.erb
+++ b/app/messages/appointment_group_published.email.erb
@@ -12,7 +12,7 @@
 <%= before_label :dates, "Date(s)" %> <%= date_string(asset.start_at, asset.end_at, :no_words) %>
 <%= before_label :signup_type, "Signup Type" %> <%=
   asset.participant_type == 'Group' ?
-    t(:group_signup, "Group (%{group_category})", :group_category => asset.sub_context.name) :
+    t(:group_signup, "Group (%{group_category})", :group_category => asset.sub_contexts.first.name) :
     t(:individual_signup, "Individual") %>
 <%= before_label :course, "Course" %> <%= asset.context.name %>
 <% if asset.available_slots -%>
