--- a/app/messages/appointment_group_published.facebook.erb
+++ b/app/messages/appointment_group_published.facebook.erb
@@ -8,7 +8,7 @@
 <%= before_label :dates, "Date(s)" %> <%= date_string(asset.start_at, asset.end_at, :no_words) %><br>
 <%= before_label :signup_type, "Signup Type" %> <%=
   asset.participant_type == 'Group' ?
-    t(:group_signup, "Group (%{group_category})", :group_category => asset.sub_context.name) :
+    t(:group_signup, "Group (%{group_category})", :group_category => asset.sub_contexts.first.name) :
     t(:individual_signup, "Individual") %><br>
 <%= before_label :course, "Course" %> <%= asset.context.name %><br>
 <% if asset.available_slots -%>
