link to appointment group from calendar event popup
fixes #6986

Test plan:
  - create an appointment group
  - reserve one of the slots as a student
  - go to the month view of the calendar and click on the appointment
  - clicking the name of the appt group should take you to the
    appointment group page

Change-Id: I58081f40b59da3b68597d645c3848d776b6c5f4c
Reviewed-on: https://gerrit.instructure.com/10459
Tested-by: Jenkins <jenkins@instructure.com>
Reviewed-by: Joe Tanner <joe@instructure.com>

--- a/app/views/jst/calendar/eventDetails.handlebars
+++ b/app/views/jst/calendar/eventDetails.handlebars
@@ -2,11 +2,11 @@
   <div class='event-details-header'>
     <a href="#" class="popover_close x-close-link">×</a>
     <h3 class="details_title title">
-      {{#ifAll can_edit fullDetailsURL}}
+      {{#if showEventLink}}
         <a href="{{fullDetailsURL}}" class="view_event_link">{{title}}</a>
       {{else}}
         {{title}}
-      {{/ifAll}}
+      {{/if}}
     </h3>
   </div>
   <div class="event-details-content">
