change "Needing Grading" to "To Grade"
a technical writer said:
http://cl.ly/2K0E3y1I1r0z0W2c082O

so this change makes it look like:
http://cl.ly/201A351x3i1K2s3N2c2R

Change-Id: Ied67416c6b4a4bfca7e884a7d24db98696c07edd
Reviewed-on: https://gerrit.instructure.com/9872
Tested-by: Hudson <hudson@instructure.com>
Reviewed-by: Brian Whitmer <brian@instructure.com>

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -109,7 +109,7 @@
         max_to_show = 8
         assignment_sets = {
           :needing_submitting => t('menu.assignments_needing_submitting', "To Turn In"),
-          :needing_grading    => t('menu.assignments_needing_grading', "Needing Grading"),
+          :needing_grading    => t('menu.assignments_needing_grading', "To Grade"),
           :recently_graded    => t('menu.assignments_recently_graded', "Recently Graded")
         }
         total_shown = 0
