use bootstrap for 'alert' style blocks
in places where we were trying to do a 'alert' style
box (like the "you've been invited to a course",
account notifications, "you can sign up for this" in
scheduler) we were doing things that were sometimes
ugly and always inconsistent. this change moves
them all to twitter bootstrap '.alert's

test plan:
* go to: /accounts/x/settings#tab-announcements and
  create a new global announcement. make sure that
  page looks good (like this: http://cl.ly/2p05312y0N1N2W261s1N ).
  then go to your dashboard and make sure it looks
  good there like this: http://cl.ly/0P1X3y2c2422082v222c

* as a student go to scheduler and make sure it looks
  like http://cl.ly/311h1b1V0H321k0C0t3p

Change-Id: If077402a0ee9fd43976ce86918848ca5b21b41b8
Reviewed-on: https://gerrit.instructure.com/10294
Tested-by: Jenkins <jenkins@instructure.com>
Reviewed-by: Ryan Florence <ryanf@instructure.com>

--- a/app/stylesheets/account_settings.sass
+++ b/app/stylesheets/account_settings.sass
@@ -55,27 +55,15 @@
     float: right
 
 .announcements_list
-  padding-left: 20px
-  li
-    padding: 5px 10px
-    margin-bottom: 5px
-    .subject
-      font-size: 1.1em
-      font-weight: bold
-      float: left
-      img
-        padding-right: 5px
-    .delete_notification_link
-      float: right
-      +opacity(0.5)
-    .dates
-      font-size: 0.8em
-      border-bottom: 1px dotted #ccc
-      margin-bottom: 5px
-    .message
-      font-size: 0.8em
-    &:hover
-      background: #eee
-      +border-radius(5px)
-      .delete_notification_link
-        +opacity(1.0)
+  .alert
+    color: #666
+  .subject
+    font-size: 13px
+    font-weight: bold
+    img
+      padding-right: 5px
+  .message
+    border-top: 1px dotted #ccc
+    margin-top: 5px
+    padding-top: 5px
+    font-size: 11px
