--- a/app/stylesheets/calendar/scheduler.sass
+++ b/app/stylesheets/calendar/scheduler.sass
@@ -35,10 +35,9 @@ button.single_item_done_button
   clear: both
   h3
     margin-bottom: 0
-  .alert-message
+  .alert
     float: right
     width: auto
-    margin: 10px
 .unpublished-ag
   background-color: #f2f2f2
 .ag-context
