--- a/app/stylesheets/context_list.sass
+++ b/app/stylesheets/context_list.sass
@@ -15,6 +15,8 @@ ul.context_list
       background-color: #eee
       .unenroll_link
         +opacity(1.0)
+      &.invited
+        background-color: transparent
 
     .invited:hover
       background-color: transparent
