--- a/app/stylesheets/g_instructure.sass
+++ b/app/stylesheets/g_instructure.sass
@@ -882,6 +882,11 @@ ul.group_list
     float: right
     margin-right: 6px
 
+  // use less padding on ones that are a boostrap .alert
+  //(like enrollment invitation and account notifications)
+  &.alert div.content
+    padding-left: 35px
+
 .communication_message_hover
   div.header
     .link_box
