--- a/app/views/shared/_invitation.html.erb
+++ b/app/views/shared/_invitation.html.erb
@@ -16,10 +16,10 @@
   <%= mt('wander_around_dont_get_lost', "Feel free to [wander around](%{link_to_course}) and see what it's like.", :link_to_course => course_path(invitation.course_id, :invitation => invitation.uuid)) %>
 <% end %>
 <%= t('accept_or_reject', "When you're ready, you can either accept or reject the invitation.") %>
-<div class="button-container button-container-right-aligned">
+<div class="button-container">
   <% form_tag course_enrollment_invitation_path(invitation.course_id) do %>
     <input type="hidden" name="invitation" value="<%= invitation.uuid %>" />
-    <button type="submit" name="accept" class="button positive button-default"><%= t('buttons.accept', 'Accept Invitation') %></button>
-    <button type="submit" name="reject" class="button reject_button"><%= t('buttons.reject', 'Reject Invitation') %></button>
+    <button type="submit" name="accept" class="button small-button positive button-default"><%= t('buttons.accept', 'Accept Invitation') %></button>
+    <button type="submit" name="reject" class="button small-button reject_button"><%= t('buttons.reject', 'Reject Invitation') %></button>
   <% end %>
 </div>
