Show term info when you show course name, fixes #6837
affected pages:
- courses in this account /accounts/:id
- account users /accounts/:id/users/:id
- course home page /courses/:id

test plan:
- ensure there is a course with a term other than the default term
- look at the affected pages to verify that the term name is visible

Change-Id: I681bd20545a462643564899511adab0b8b71d3db
Reviewed-on: https://gerrit.instructure.com/9852
Tested-by: Jenkins <jenkins@instructure.com>
Reviewed-by: Jon Jensen <jon@instructure.com>

--- a/app/views/accounts/_course.html.erb
+++ b/app/views/accounts/_course.html.erb
@@ -10,9 +10,10 @@
     <% if course %>
     <div class="details ellipsis">
       <div>
-        <% if course.course_code != course.name %>
-          <span style="padding-right: 30px;"><%= course.course_code %></span>
-        <% end %>
+        <span style="padding-right: 30px;">
+          <%= show_code_and_term_for(course) %>
+        </span>
+
         <% if course.respond_to?(:sis_source_id) && course.sis_source_id %>
           <%= before_label(t(:sis_id_label, "SIS ID")) %> <%= course.sis_source_id %>
         <% end %>
