remove $.uniq in favor of _.uniq or $.unique
underscore and jquery both already have a 'unique'
function.  used $.unique when underscore wasn't
already present.

Change-Id: If586e57754a4bd70d552c67cd94bb3515f03fd3e
Reviewed-on: https://gerrit.instructure.com/10308
Tested-by: Jenkins <jenkins@instructure.com>
Reviewed-by: Ryan Florence <ryanf@instructure.com>

--- a/app/views/quizzes/statistics.html.erb
+++ b/app/views/quizzes/statistics.html.erb
@@ -231,7 +231,7 @@ require([
   'i18nObj' /* I18n.t */,
   'jquery' /* $ */,
   'jqueryui/dialog',
-  'jquery.instructure_misc_helpers' /* scrollSidebar, /\$\.uniq/ */,
+  'jquery.instructure_misc_helpers' /* scrollSidebar */,
   'jquery.templateData' /* fillTemplateData, getTemplateData */
 ], function(I18n, $) {
 
@@ -257,7 +257,7 @@ $(document).ready(function() {
       var question_name = $tr.find("td .question_name").text();
       ids = ids.split(",");
       var uncounted = responses - ids.length;
-      var unique_ids = $.uniq(ids);
+      var unique_ids = $.unique(ids);
       for(var idx in unique_ids) {
         var id = unique_ids[idx];
         var cnt = $.grep(ids, function(i) { return i == id; }).length;
