add multiple students to an observer in the UI, closes #7768
other changes:
- makes it possible to add a student to multiple sections in the course
- pagination of the user lists
- converted user tab js to coffee and backbone

test plan:
- as a teacher go to /courses/*/settings#tab-users
- verify that multiple students can be linked/unlinked to an observer
- verify that users can be added to and removed from multiple sections
- verify that 'Resend Invitation' and 'Remove from course' work

Change-Id: I0f64f72f1937348817990b6f13b6310185b68a73
Reviewed-on: https://gerrit.instructure.com/10865
Tested-by: Jenkins <jenkins@instructure.com>
Reviewed-by: Joe Tanner <joe@instructure.com>

--- a/app/stylesheets/g_instructure.sass
+++ b/app/stylesheets/g_instructure.sass
@@ -1135,6 +1135,7 @@ html > body .new_activity_message form textarea
 #user_list_boxes
   position: relative
   height: 152px
+  margin-top: 10px
   #user_list_textarea_container, #user_list_processing, #user_list_parsed
     height: 152px
     width: 100%
@@ -1148,15 +1149,30 @@ html > body .new_activity_message form textarea
     overflow: auto
     height: 126px
     .ui-widget
-      margin: 2px
+      margin: 0 8px 8px 0
     .person
       float: left
-      margin: 2px
+      background: #FFF
+      margin: 0 8px 8px 0
+      padding: 8px
       font-size: 11px
-      height: 33px
-      padding: 0 4px
+      height: 20px
+      -webkit-box-shadow: inset 33px 0 0 #F7F7F7, inset 34px 0 0 #CCC
+      -moz-box-shadow:    inset 33px 0 0 #F7F7F7, inset 34px 0 0 #CCC
+      box-shadow:         inset 33px 0 0 #F7F7F7, inset 34px 0 0 #CCC
+      div
+        margin: 2px 0 0 33px
       .address, .login
         font-weight: normal
+      span
+        height: 20px
+        width: 20px
+        float: left
+        background: #F7F7F7 url(/images/circle-plus.png) no-repeat center center
+      &.existing-user
+        span
+          background: #F7F7F7 url(/images/circle-check.png) no-repeat center center
+
 
 body > #ui-datepicker-div
   display: none
