--- a/app/views/quizzes/new.html.erb
+++ b/app/views/quizzes/new.html.erb
@@ -1,6 +1,7 @@
 <%
   jammit_css :quizzes, :tinymce
   js_bundle :quizzes_bundle
+  js_env :QUIZZES => {:QUIZ => true}
   content_for :page_title, (@quiz.quiz_title || !@quiz.quiz_title.empty? ? @quiz.quiz_title : t(:default_page_title, 'New Quiz'))
 %>
 <% content_for :right_side do %>
