organize backbone code and don't make people think about 'use!'
if you want Backbone, require 'Backbone' --it will have
the patches we made to it's default functionality.

same for underscore, just require 'underscore' you should
not have to 'use!underscore'

Change-Id: I374d4efbc60ccb66a88299346a6e415c976fbef0
Reviewed-on: https://gerrit.instructure.com/10184
Tested-by: Hudson <hudson@instructure.com>
Reviewed-by: Jon Jensen <jon@instructure.com>

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -266,18 +266,15 @@
       common: 'compiled/bundles/common',
       jquery: 'vendor/jquery-1.6.4',
       jqueryui: 'vendor/jqueryui',
-      underscore: 'vendor/underscore',
-      backbone: 'vendor/backbone',
       uploadify: '../flash/uploadify/jquery.uploadify.v2.1.4',
       use: 'vendor/use'
     },
     use: {
-      backbone: {
-        deps: ['use!underscore', 'jquery'],
-        attach: 'Backbone'
-      },
-      underscore: {
-        attach: '_'
+      'vendor/backbone': {
+        deps: ['underscore', 'jquery'],
+        attach: function(_, $){
+          return Backbone;
+        }
       }
     }
   };
