--- a/spec/javascripts/runner.html.erb
+++ b/spec/javascripts/runner.html.erb
@@ -45,19 +45,16 @@
       paths: {
         jquery: 'vendor/jquery-1.6.4',
         jqueryui: 'vendor/jqueryui',
-        underscore: 'vendor/underscore',
-        backbone: 'vendor/backbone',
         use: 'vendor/use'
       },
 
       // non-amd shims
       use: {
-        backbone: {
-          deps: ['use!underscore', 'jquery'],
-          attach: 'Backbone'
-        },
-        underscore: {
-          attach: '_'
+        'vendor/backbone': {
+          deps: ['underscore', 'jquery'],
+          attach: function(_, $){
+            return Backbone;
+          }
         }
       },
 
