allow teachers to resubmit to turnitin; closes #7981
add more structure to the turnitin_data hash on a submission to keep track of
what state things are in, so that we can present errors to the user as they
happen and provide a way to resubmit. there are three states: 'pending',
'error', and 'scored'.

submissions start out as 'pending', and can move to 'error' if anything goes
wrong in the submission process (either in creating the assignment, enrolling
the user, or actually submitting the paper). there are built in retrys, and the
error state only gets set if there is still an error after the retry limit. if
this succeeds, we stay pending until the score is successfully retrieved from
turnitin, at which point it is marked 'scored'.

this change is primarily in speed grader, although icons have been updated in
the gradebooks and submission pages as well. in the 'scored' state, (or without
a state) things should work exactly as they have previously - display a score,
which can be clicked to see the full report. in the 'error' state (indicated
with an exclaimation point icon), clicking the icon gives you more details
about the error and the option to resubmit. in the 'pending' state (indicated
by a clock icon), clicking the icon just explains that the submission is
pending.

test-plan:
- locate some submissions that were scored with turnitin before this change was
  applied and verify that they still work as expected
- submit something new that will get sent to turnitin. verify that it initially
  gets marked as pending, and then after 5-10 minutes has a score.
- submit something that will result in a turnitin error (eg: < 20 words,
  password protected pdf). verify that it initially gets marked as pending,
  then after ~30 minutes (to account for retries) is marked as an error.
- click the icon, and click the resubmit button. verify that it goes back to
  pending.
- verify that the new turnitin icons for these submission in gradebooks 1 and
  2 look correct and don'

--- a/app/stylesheets/g_instructure.sass
+++ b/app/stylesheets/g_instructure.sass
@@ -1,4 +1,5 @@
 @import environment.sass
+@import turnitin.sass
 
 #instructure_ajax_error_box
   :display none
@@ -1379,23 +1380,6 @@ fieldset
   legend
     font-weight: bold
     margin-left: 20px
-
-.turnitin_similarity_score
-  white-space: nowrap
-  border: 1px solid #bbb
-  border-top: 5px solid #bbb
-  padding: 1px 2px 2px
-  font-size: 0.8em
-  &.none_score
-    border-color: #4987EC
-  &.acceptable_score
-    border-color: #52E252
-  &.warning_score
-    border-color: #ECEC49
-  &.problem_score
-    border-color: #FFB420
-  &.failure_score
-    border-color: #FF3F3F
 h2.h-margin-top,h3.h-margin-top
   margin-top: 20px
 
