--- a/app/messages/appointment_group_updated.facebook.erb
+++ b/app/messages/appointment_group_updated.facebook.erb
@@ -1,5 +1,5 @@
 <% define_content :link do %>
-  http://<%= HostUrl.context_host(asset.context) %>/appointment_groups/<%= asset.id %>
+  http://<%= HostUrl.context_host(asset.contexts.first) %>/appointment_groups/<%= asset.id %>
 <% end %>
 
 <%= t :message, 'Time slots have been added to "%{appointment_name}" and are available for signup.', :appointment_name => asset.title %><br>
@@ -10,7 +10,10 @@
   asset.participant_type == 'Group' ?
     t(:group_signup, "Group (%{group_category})", :group_category => asset.sub_contexts.first.name) :
     t(:individual_signup, "Individual") %><br>
-<%= before_label :course, "Course" %> <%= asset.context.name %><br>
+<%= before_label :course, "Course" %> <%=
+  asset.participant_type == 'Group' ?
+    asset.contexts.first.name :
+    asset.contexts_for_user(user).map(&:name).join(", ") %><br>
 <% if asset.available_slots -%>
 <%= before_label :slots_remaining, "Available time slots" %> <%= asset.available_slots %><br>
 <% end -%>
