show recent feedback to student of specified course; fixes #8270
on the course homepage, show recent feedback based on whether they are
a student of that specific course.

test-plan:
- as a user who is a teacher in one course and a student in another, go
  to the course homepage of the course for which you are a teacher
- the recent feedback section should not be shown.

Change-Id: I11707ce7224a86c6217971ba1fab33251eb42383
Reviewed-on: https://gerrit.instructure.com/10194
Reviewed-by: Cody Cutrer <cody@instructure.com>
Tested-by: Hudson <hudson@instructure.com>

--- a/app/views/courses/_recent_feedback.html.erb
+++ b/app/views/courses/_recent_feedback.html.erb
@@ -24,7 +24,7 @@
       <span class='tooltip-carat'></span>
       <span class="tooltip_text">
         <% if recent_feedback.workflow_state != 'unsubmitted' %>
-          <span style="display: block;"><%= before_label(icon_explanation.capitalize) %> 
+          <span style="display: block;"><%= before_label(icon_explanation.try(:capitalize)) %> 
             <% if recent_feedback.workflow_state == 'graded' %>
               <span style="font-size: 0.8em;"><%= datetime_string(recent_feedback.graded_at) %></span>
             <% else %>
@@ -35,7 +35,7 @@
             <span style="display: block; font-style: italic;"><%= t('not_graded', %{not graded}) %></span>
           <% end %>
         <% else %>
-          <span style="display: block; font-style: italic;"><%= icon_explanation.capitalize %></span>
+          <span style="display: block; font-style: italic;"><%= icon_explanation.try(:capitalize) %></span>
           <span style="display: block;"><%= before_label('due_date', %{Due}) %> <span style="font-size: 0.8em;"><%= datetime_string(assignment.due_at) %></span></span>
         <% end %>
         <% if assignment.points_possible %>
