normalize box-shadow usage in css/sass/scss
we were using a deprecated mixin syntax, and had broken calls in other
places. normalized all occurrences to just do plain old css, since the
mixin wasn't helping our browser support matrix and just inflated the size
of our css

test plan:
1. use canvas
2. ensure drop shadows appear where they should

Change-Id: I8feea097fc6855bff0e820dc3b790d49c1e1a9da
Reviewed-on: https://gerrit.instructure.com/10201
Tested-by: Hudson <hudson@instructure.com>
Reviewed-by: Ryan Shaw <ryan@instructure.com>

--- a/app/stylesheets/g_instructure.sass
+++ b/app/stylesheets/g_instructure.sass
@@ -1452,7 +1452,7 @@ form.user_content_post_form
     text-decoration: none !important
     &:hover
       border-color: #165A92
-      +box-shadow(rgba(0,0,0,0.5), 0px, 1px, 2px, 0)
+      box-shadow: 0 1px 2px 0 rgba(0,0,0,0.5)
     font-size: 12px
 
     border: 1px solid #1e7eca
