--- a/app/stylesheets/Calendar.sass
+++ b/app/stylesheets/Calendar.sass
@@ -120,7 +120,7 @@
   position: absolute
   z-index: 1000
   border: 1px solid #b0afaf
-  box-shadow: rgba(0,0,0, 0.6) 2px 2px 10px
+  box-shadow: 2px 2px 10px rgba(0,0,0, 0.6)
   background-color: white
   max-width: 500px
   ul
@@ -165,7 +165,7 @@
 .calendar .fc-button
   +unselectable
   +vertical-gradient(#f3f3f3, #cecece)
-  +box-shadow(rgba(0, 0, 0, 0.5), 0px, 1px, 2px, 0)
+  box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.5)
   border: 1px solid #bdbdbd
   padding: 3px 15px
   & ~ .fc-button
