--- a/app/stylesheets/base/_#right-side.sass
+++ b/app/stylesheets/base/_#right-side.sass
@@ -5,7 +5,7 @@
   width: $right_side_width
   margin-bottom: 1em
   padding-bottom: 20px
-  box-shadow: #E8E8E8 -3px 3px 32px
+  box-shadow: -3px 3px 32px #E8E8E8
   margin-left: 15px
   background-color: #f3f4f5
   border-left: 1px solid #ccc
