--- a/app/stylesheets/Calendar.sass
+++ b/app/stylesheets/Calendar.sass
@@ -122,6 +122,7 @@
   border: 1px solid #b0afaf
   box-shadow: 2px 2px 10px rgba(0,0,0, 0.6)
   background-color: white
+  min-width: 250px
   max-width: 500px
   ul
     +reset-list
