copy all the rubrics when copying a course
Only the rubrics created directly in a course were being
copied. This commit copies ones through rubric_associations
to get everything.

Test Plan:
 * Create a course with some rubrics
 * Make an assignment use a rubric associated with another course
 * Copy the course
 * The new course should have all the necessary rubrics

closes #8266

Change-Id: Ib1e1b6c0cc053d53182c0825fe871eb8429ab734
Reviewed-on: https://gerrit.instructure.com/10266
Tested-by: Hudson <hudson@instructure.com>
Reviewed-by: Bracken Mosbacker <bracken@instructure.com>

--- a/app/views/content_imports/_copy_course_item_selection.html.erb
+++ b/app/views/content_imports/_copy_course_item_selection.html.erb
@@ -43,10 +43,12 @@
   </ul>
 <% end %>
 
-<% if @source_course.rubrics.active.length > 0 %>
+<% if @source_course.rubric_associations.length > 0 %>
   <h3><%= check_box :copy, :all_rubrics, :class => "copy_all", :checked => true %><%= label :copy, :all_rubrics, image_tag('flagged_question_dim.png') + " " + t('labels.rubrics', "Rubrics for %{course}", :course => @source_course.name) %></h3>
   <ul class="unstyled_list root_asset_list">
-    <% @source_course.rubrics.active.each do |rub| %>
+    <% @source_course.rubric_associations.each do |assoc|
+       rub = assoc.rubric
+    %>
       <li>
         <%= check_box "copy[rubrics]", mig_id(rub) %>
         <%= label "copy[rubrics]", mig_id(rub), rub.title %>
