fix calendar event linking issues, fixes #8337, #8338, #8339
remove links from calendar2 into event show page, unless the user has edit
privs (since there is no readonly view with the section-event change).
also fix links to event show page for section-level events (#8337).

fix dashboard notifications so that event creators aren't notified of
section-level events they create (#8338).

implement route and redirect for section-level events so that event
participants can click on the dashboard link and be taken right to the
event in calendar2 (#8339).

test plan:
1. create a regular dated event and a section-level dated event in
   calendar2
2. confirm that you can get to the advanced edit page via the title link
   or the more options link for both events
3. confirm that you do not get dashboard (or email) notifications about
   either event
4. as a student, confirm that you get dashboard notifications about both
   events
5. confirm that clicking on the dashboard link takes you right to each
   event
6. confirm that you don't get any links to the advanced options page for
   either event in calendar2

Change-Id: Ia0efcdbc7f8fa623cf0415ac630f80fee48a885d
Reviewed-on: https://gerrit.instructure.com/10369
Reviewed-by: Ryan Shaw <ryan@instructure.com>
Tested-by: Jon Jensen <jon@instructure.com>

--- a/app/views/calendars/show2.html.erb
+++ b/app/views/calendars/show2.html.erb
@@ -4,6 +4,8 @@
     :CONTEXTS => @contexts_json,
     :MANAGE_CONTEXTS => @manage_contexts,
     :SELECTED_CONTEXTS => @selected_contexts,
+    :ACTIVE_EVENT => @active_event_id,
+    :VIEW_START => @view_start,
   }
   js_bundle :calendar2
   jammit_css :calendar2
