--- a/app/views/jst/calendar/eventDetails.handlebars
+++ b/app/views/jst/calendar/eventDetails.handlebars
@@ -2,11 +2,11 @@
   <div class='event-details-header'>
     <a href="#" class="popover_close x-close-link">×</a>
     <h3 class="details_title title">
-      {{#if fullDetailsURL}}
+      {{#ifAll can_edit fullDetailsURL}}
         <a href="{{fullDetailsURL}}" class="view_event_link">{{title}}</a>
       {{else}}
         {{title}}
-      {{/if}}
+      {{/ifAll}}
     </h3>
   </div>
   <div class="event-details-content">
